--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@
      padding-top: 74px;
  }
 
- .top-menu {
+ .top-menu__list {
      display: flex;
      flex-wrap: wrap;
  }
@@ -93,25 +93,7 @@
      padding-top: 114px;
  }
 
- /* .main__pic__first__layer {
- height: 750px;
- background-image: url(../img/background.jpg);
- background-repeat: no-repeat;
- background-position: right;
- position: relative;
- z-index: 1;
-}
-
-
-
-.second__layer {
- width: 100%;
- height: 100%;
- position: relative;
- top: -636px; /* Сдвигаем текст вверх 
- left: 0px; 
-  z-index: 2;
-} */
+ 
 
  .welcom-section__title {
      font-size: 80px;
